Clearer about text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="wp-block-group sched_block has-background" style="background-color:#59c2a233">
       <div class="wp-block-group__inner-container is-layout-flow wp-block-group-is-layout-flow">
         <p>
-          This is a work-in-progress!  It scrapes the official Bridges 2025 program, then rearranges it for a better user experience.
+          This is a work-in-progress!  It is a copy of the official Bridges 2025 program, updated daily, but rearranged on the page for a better user experience.
           I have just started, and there is much more I can improve, starting with a nice layout for parallel sessions.
           Check back for updates!  And please, <a href="mailto:scott@vorthmann.org">share your suggestions!</a>.
         </p>
