--- a/index.html
+++ b/index.html
@@ -20,39 +20,67 @@
     .has-light-gray-background-color {
       background-color: #f1f1f1;
     }
-    .day p,
-    .day div {
+
+    .toggle > .sessions,
+    .toggle > .tracks {
       display: none;
     }
-    .open p,
-    .open div {
+    .open > .sessions,
+    .open > .tracks {
+      margin-top: 1em;
       display: block;
     }
-    .day h4::before {
+    .toggle::before {
       content: "▶ ";
       cursor: pointer;
     }
-    .open h4::before {
+    .open::before {
       content: "▼ ";
       cursor: pointer;
+    }
+    .parallel {
+      border: 2px solid #888;
+      margin: 5px;
+      padding: 5px;
+    }
+    .day-heading {
+      font-size: 1em;
+      font-weight: bold;
+      margin-top: 1em;
+      margin-bottom: 0.5em;
+    }
+    .day {
+      margin-top: 1.5em;
+      margin-bottom: 0.5em;
     }
   </style>
 
   <script type="module" src="script.js"></script>
 </head>
 <body>
-  <div id="about" class="day">
-    <h4 class="wp-block-heading">About this App</h4>
-    <div class="wp-block-group sched_block has-background" style="background-color:#59c2a233">
-      <div class="wp-block-group__inner-container is-layout-flow wp-block-group-is-layout-flow">
-        <p>
-          This is a work-in-progress!  It is a copy of the official Bridges 2025 program, updated daily, but rearranged on the page for a better user experience.
-          I have just started, and there is much more I can improve, starting with a nice layout for parallel sessions.
-          Check back for updates!  And please, <a href="mailto:scott@vorthmann.org">share your suggestions!</a>.
-        </p>
+  <div id="about" class="day toggle">
+    <span class="day-heading">About this App</span>
+    <div class="sessions toggled">
+      <div class="wp-block-group sched_block has-background" style="background-color:#59c2a233">
+        <div class="wp-block-group__inner-container is-layout-flow wp-block-group-is-layout-flow">
+          <p>
+            This is a copy of the 
+            <a href="https://www.bridgesmathart.org/b2025/bridges-2025-program/" target="_blank" rel="noopener noreferrer">official Bridges 2025 program</a>,
+            updated daily, but rearranged on the page for a better user experience.
+          </p>
+          <p>
+            <em>This is a work-in-progress!</em>
+            I have just started, and there is much more I can improve, working toward a better overall layout and user experience.
+            Reload for updates, and please, <a href="mailto:scott@vorthmann.org">share your suggestions.</a>.
+          </p>
+          <p>
+            The source code can be
+            <a href="https://github.com/vorth/bridges-program" target="_blank" rel="noopener noreferrer">found here</a>;
+            web developers are encouraged to fork the repo and submit pull requests.
+          </p>
+        </div>
       </div>
     </div>
-    <p></p>
   </div>
 </body>
 </html>
