--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             This is a copy of the 
             <a href="https://www.bridgesmathart.org/b2025/bridges-2025-program/" target="_blank" rel="noopener noreferrer">official Bridges 2025 program</a>,
             but rearranged on the page for a better user experience.  This copy is updated at least daily from the official program, and sometimes on demand.
-            The last build was at <strong><span id="last-build-time"></span></strong>.
+            The last update was at <strong><span id="last-build-time"></span></strong>.
           </p>
           <p>
             <em>This is a work-in-progress!</em> Reload the page for the latest improvements.
