--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       border: 1px solid lightgray;
       margin: 5px;
       padding: 5px;
+      overflow: clip;
     }
     .day-heading {
       font-size: 1em;
@@ -56,6 +57,8 @@
     .tracks {
       display: grid;
       grid-template-columns: repeat(6,100%);
+      transform: translateX(0);
+      transition: transform 0.5s;
     }
     .tracks > * {
       width: 96%;
