About text change

--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
             The last update was at <strong><span id="last-build-time"></span></strong>.
           </p>
           <p>
-            <em>This is a work-in-progress!</em> Reload the page for the latest improvements.
-            I am working toward a better overall layout and user experience.
-            Please <a href="mailto:scott@vorthmann.org">share your suggestions</a>.
+            <em>I may still improve this app during the conference!</em> Reload the page for the latest improvements,
+            and please <a href="mailto:scott@vorthmann.org">share your suggestions</a>.
           </p>
           <p>
             The source code can be
