--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             <a href="https://github.com/vorth/bridges-program" target="_blank" rel="noopener noreferrer">found here</a>;
             web developers are encouraged to fork the repo and submit pull requests.
           </p>
+          <p style="justify-self: end;"><em>Scott Vorthmann</em></p>
         </div>
       </div>
     </div>
