Every six hours

--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
           <p>
             This is a copy of the 
             <a href="https://www.bridgesmathart.org/b2025/bridges-2025-program/" target="_blank" rel="noopener noreferrer">official Bridges 2025 program</a>,
-            but rearranged on the page for a better user experience.  This copy is updated at least daily from the official program, and sometimes on demand.
+            but rearranged on the page for a better user experience.  This copy is updated from the official program at least once every six hours, and sometimes on demand.
             The last update was at <strong><span id="last-build-time"></span></strong>.
           </p>
           <p>
-            <em>I may still improve this app during the conference!</em> Reload the page for the latest improvements,
+            <em>I may still improve this app during the conference!</em> Reload the page for the latest improvements (or program changes),
             and please <a href="mailto:scott@vorthmann.org">share your suggestions</a>.
           </p>
           <p>
