Added card preview metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bridges 2025 Program</title>
+
+    <meta name="theme-color" content="#000000">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:type" content="website">
+
+    <title>Bridges 2025 Program</title>
+    <meta property="og:site_name" content="Bridges 2025 Program">
+    <meta property="og:title" content="Bridges 2025 Program">
+    <meta property="twitter:title" content="Bridges 2025 Program">
+
+    <meta name="author" content="Scott Vorthmann">
+  
+    <meta name="description" content="A repackaging of the official Bridges 2025 program for better usability">
+    <meta property="og:description" content="A repackaging of the official Bridges 2025 program for better usability">
+    <meta property="twitter:description" content="A repackaging of the official Bridges 2025 program for better usability">
+
+    <meta name="keywords" content="bridges,math,art,conference,program,schedule,scott vorthmann">
+    
+    <meta property="og:image" content="https://vorth.github.io/bridges-program/logo.png">
+    <meta name="twitter:image" content="https://vorth.github.io/bridges-program/logo.png">
+
+    <meta property="og:url" content="https://vorth.github.io/bridges-program/">
+    <link rel="canonical" href="https://vorth.github.io/bridges-program/">
+
 
   <style>
     body {
